Vertical alignment fix on resource buttons.

--- a/css/include/layout.styl
+++ b/css/include/layout.styl
@@ -24,7 +24,7 @@ section
 
 .download-guides
   width 260px
-  margin 23px 0 0 20px
+  margin 20px 0 0 20px
 
   li
     display block
